# -AI-

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml
config/: detection_config.yaml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: DroneMap.jsx  DroneTask.jsx  Login.jsx  NewRepairForm.jsx  RepairList.jsx  UploadDetection.css  UploadDetection.jsx  Weather.jsx
perception/: __init__.py  class_map_sync.py  detector.py  image_cli.py  json_entry.py  preprocessor.py
perception/utils/: __init__.py  output.py  visualization.py
tests/: testOfCampus.py  test_class_map_sync.py  test_image_cli.py  test_json_entry.py  test_main_entry.py  test_perception.py
